--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Nicolas Dehez| Hello World !</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -26,12 +26,11 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Nicolas!</div>
-		<div class="tagline">Average code master | Oops | Pas d'idée | </div>
+		<div class="tagline">[ Average code master | Geek | Duck collector ]  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/deheznicolas"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/nicolasdehez"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/nicolas-dehez-776434a8/"><i class="fab fa-linkedin"></i></a>
 
     </div>
 	</main>
