--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Nicolas!</div>
-		<div class="tagline">[ Average code master | Geek | Duck collector ]  </div>
+		<div class="tagline">[ Average code master | UX Enthusiast ]  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/deheznicolas"><i class="fab fa-github"></i></a>
