--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<main>
 		<div class="intro">Hello, I'm Nicolas!</div>
 		<div class="tagline">[ Average code master | UX Enthusiast ]  </div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+		</br>
+		<p>Portfolio in progress</p>
+		</br>
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/deheznicolas"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/nicolas-dehez-776434a8/"><i class="fab fa-linkedin"></i></a>
